--- a/CaesarCipher/Localizable.xcstrings
+++ b/CaesarCipher/Localizable.xcstrings
@@ -22,7 +22,14 @@
       }
     },
     "Copy" : {
-
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kopieren"
+          }
+        }
+      }
     },
     "Decrypt" : {
       "localizations" : {
