Added: German-translation for Paste-Button caption

--- a/CaesarCipher/Localizable.xcstrings
+++ b/CaesarCipher/Localizable.xcstrings
@@ -91,6 +91,16 @@
         }
       }
     },
+    "Paste" : {
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Einfügen"
+          }
+        }
+      }
+    },
     "Reset" : {
       "localizations" : {
         "de" : {
